kubernetes/converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
  labels:
    app: converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
      - name: converter
        image: europe-north1-docker.pkg.dev/august-tesla-333012/video-api/converter:v65
        resources:
          requests:
            cpu: "200m"
          limits:
            cpu: "400m"
