kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api-deployment
spec:
  selector:
    matchLabels:
      app: flask-api
  replicas: 1
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
      - name: flask-api
        image: europe-north1-docker.pkg.dev/august-tesla-333012/video-api/flask-api:v3 
        ports:
        - containerPort: 80
          name: api-port
---
apiVersion: v1
kind: Service
metadata:
  name: flask-api-service
spec:
  type: LoadBalancer
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
